Fixed nowrap on simple and small posters layouts.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -796,6 +796,14 @@ td.tvShow a:hover {
     margin-left: -50px;
 }
 
+.min-cell-width {
+    width: 1px;
+}
+
+.nowrap {
+    white-space: nowrap;
+}
+
 /* =======================================================================
 home_addShows.mako
 ========================================================================== */
